[gd_scene load_steps=14 format=3 uid="uid://dj4br3v2pbd"]

[ext_resource type="Script" path="res://Scenes/drag_and_drop_card_game/drag_drop_test.gd" id="1_70vqr"]
[ext_resource type="Texture2D" uid="uid://bnq4ot83w6im7" path="res://Scenes/drag_and_drop_card_game/bug_images/ALBY.png" id="2_jb4yd"]
[ext_resource type="PackedScene" uid="uid://cy7b1qcm2dncb" path="res://Scenes/drag_and_drop_card_game/preset_datablock.tscn" id="2_rrbj6"]
[ext_resource type="Texture2D" uid="uid://0osofscb51nf" path="res://Scenes/drag_and_drop_card_game/bug_images/BIX.png" id="3_h76bb"]
[ext_resource type="Script" path="res://Scenes/drag_and_drop_card_game/datablock_mang.gd" id="3_ipywi"]
[ext_resource type="PackedScene" uid="uid://chcoql3eof581" path="res://Scenes/drag_and_drop_card_game/preset_name_datablock.tscn" id="3_r2la3"]
[ext_resource type="Script" path="res://Scenes/drag_and_drop_card_game/preset_datablock_mang.gd" id="4_53yv1"]
[ext_resource type="Texture2D" uid="uid://5h1ibs7chodg" path="res://Scenes/drag_and_drop_card_game/bug_images/EMBER.png" id="4_i0jcn"]
[ext_resource type="Texture2D" uid="uid://ddo2lw3e82wll" path="res://Scenes/drag_and_drop_card_game/bug_images/FIZZGIG.png" id="5_7k3vj"]
[ext_resource type="Script" path="res://Scenes/drag_and_drop_card_game/unplaced_datablocks.gd" id="5_plxf8"]
[ext_resource type="PackedScene" uid="uid://0gl5using56j" path="res://Scenes/drag_and_drop_card_game/datablock_slot.tscn" id="6_bobkp"]
[ext_resource type="Texture2D" uid="uid://bkn6t1p8e3ef4" path="res://Scenes/drag_and_drop_card_game/bug_images/NOX.png" id="6_xikuh"]
[ext_resource type="Texture2D" uid="uid://dtqh12xooft57" path="res://Scenes/drag_and_drop_card_game/bug_images/TAFFY.png" id="7_hmkw5"]

[node name="DragDropTest" type="Node2D"]
position = Vector2(12, 3)
script = ExtResource("1_70vqr")

[node name="graphics" type="Node2D" parent="."]

[node name="lower_table_outline" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 334.0
offset_top = 25.0
offset_right = 555.0
offset_bottom = 280.0
color = Color(0.00230388, 0.134173, 0.170083, 1)

[node name="lower_table_background" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 338.0
offset_top = 29.0
offset_right = 551.0
offset_bottom = 276.0
color = Color(0.0100097, 0.269909, 0.282558, 1)

[node name="upper_table_outline" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 341.0
offset_top = 32.0
offset_right = 548.0
offset_bottom = 273.0
color = Color(0.034265, 0.468276, 0.487221, 1)

[node name="upper_table_background" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 343.0
offset_top = 34.0
offset_right = 546.0
offset_bottom = 271.0
color = Color(0.0575887, 0.626515, 0.652203, 1)

[node name="lower_table_outline2" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 61.0
offset_top = 25.0
offset_right = 282.0
offset_bottom = 280.0
color = Color(0.00230388, 0.134173, 0.170083, 1)

[node name="lower_table_background2" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 65.0
offset_top = 29.0
offset_right = 278.0
offset_bottom = 276.0
color = Color(0.0100097, 0.269909, 0.282558, 1)

[node name="upper_table_outline2" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 68.0
offset_top = 32.0
offset_right = 275.0
offset_bottom = 273.0
color = Color(0.034265, 0.468276, 0.487221, 1)

[node name="upper_table_background2" type="ColorRect" parent="graphics"]
z_index = -5
offset_left = 70.0
offset_top = 34.0
offset_right = 273.0
offset_bottom = 271.0
color = Color(0.0575887, 0.626515, 0.652203, 1)

[node name="preset_datablocks" type="Node2D" parent="."]

[node name="preset_datablock_r0c0" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("2_rrbj6")]
z_index = -1
position = Vector2(381, 56)
scale = Vector2(1, 1)

[node name="preset_datablock_r0c1" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("2_rrbj6")]
z_index = -1
position = Vector2(445, 56)
scale = Vector2(1, 1)

[node name="preset_datablock_r0c2" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("2_rrbj6")]
z_index = -1
position = Vector2(508, 56)
scale = Vector2(1, 1)

[node name="preset_datablock_r1c0" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("2_rrbj6")]
z_index = -1
position = Vector2(381, 88)
scale = Vector2(1, 1)

[node name="preset_datablock_r1c1" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("2_rrbj6")]
z_index = -1
position = Vector2(445, 88)
scale = Vector2(1, 1)

[node name="preset_datablock_r1c2" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("2_rrbj6")]
z_index = -1
position = Vector2(509, 88)
scale = Vector2(1, 1)

[node name="preset_datablock_r2c0" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("3_r2la3")]
position = Vector2(381, 121)

[node name="preset_datablock_r3c0" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("3_r2la3")]
position = Vector2(382, 153)

[node name="preset_datablock_r4c0" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("3_r2la3")]
position = Vector2(382, 184)

[node name="preset_datablock_r5c0" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("3_r2la3")]
position = Vector2(382, 216)

[node name="preset_datablock_r6c0" parent="preset_datablocks" groups=["preset_datablocks"] instance=ExtResource("3_r2la3")]
position = Vector2(382, 248)

[node name="preset_name_datablock" parent="preset_datablocks" instance=ExtResource("3_r2la3")]
visible = false
position = Vector2(235, 73)

[node name="Alby" type="Sprite2D" parent="preset_datablocks"]
visible = false
position = Vector2(170, 157)
scale = Vector2(2.97222, 3.05556)
texture = ExtResource("2_jb4yd")

[node name="Bix" type="Sprite2D" parent="preset_datablocks"]
visible = false
position = Vector2(174, 158)
scale = Vector2(2.3125, 2.72222)
texture = ExtResource("3_h76bb")

[node name="Ember" type="Sprite2D" parent="preset_datablocks"]
visible = false
position = Vector2(172, 167)
scale = Vector2(2.55556, 2.55556)
texture = ExtResource("4_i0jcn")

[node name="Fizzgig" type="Sprite2D" parent="preset_datablocks"]
visible = false
position = Vector2(167, 156)
scale = Vector2(2.97222, 3.13889)
texture = ExtResource("5_7k3vj")

[node name="Nox" type="Sprite2D" parent="preset_datablocks"]
visible = false
position = Vector2(165, 159)
scale = Vector2(3.63889, 3.27778)
texture = ExtResource("6_xikuh")

[node name="Taffy" type="Sprite2D" parent="preset_datablocks"]
visible = false
position = Vector2(172, 166)
scale = Vector2(3.02778, 3.27778)
texture = ExtResource("7_hmkw5")

[node name="datablock_mang" type="Node2D" parent="."]
script = ExtResource("3_ipywi")

[node name="preset_datablock_mang" type="Node2D" parent="."]
script = ExtResource("4_53yv1")

[node name="unplaced_datablocks" type="Node2D" parent="."]
script = ExtResource("5_plxf8")

[node name="datablock_slots" type="Node2D" parent="."]

[node name="datablock_slot_r2c1" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(445, 120)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r2c2" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(509, 120)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r3c1" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(445, 152)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r3c2" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(509, 152)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r4c1" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(445, 184)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r4c2" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(509, 184)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r5c1" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(445, 216)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r5c2" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(509, 216)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r6c1" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(445, 248)
scale = Vector2(1.2, 1.2)

[node name="datablock_slot_r6c2" parent="datablock_slots" groups=["datablock_slots"] instance=ExtResource("6_bobkp")]
z_index = -3
position = Vector2(509, 248)
scale = Vector2(1.2, 1.2)
